--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <a href="#EXAMPLES">EXAMPLES</a>
     <a href="#TEST-FILE-SYNTAX">TEST FILE SYNTAX</a>
     <a href="#SOURCE-CODE">SOURCE CODE</a>
+    <a href="#CONTRIBUTORS">CONTRIBUTORS</a>
     <a href="#AUTHOR">AUTHOR</a>
     </div>
   
@@ -133,6 +134,10 @@ answers will be marked by <code>!</code>. Example of a log file:</p>
 <dl>
 <dt><code>--select</code>=<var>number</var></dt><dd><p>Select certain <var>number</var> of questions. Useful for generating small random
 test sessions.</p></dd>
+<dt><code>--repeat-incorrect</code></dt><dd><p>Repeat questions answered incorrectly. This option has no effect when used
+with <code>--full-test</code> option. When this option is used, the logfile will not
+be generated at the end of the session and only time will be listed in
+statistics (since it forces all questions to be answered correctly).</p></dd>
 <dt><code>--full-test</code></dt><dd><p>Do not reveal correct answers until the end of test</p></dd>
 <dt><code>-s</code>, <code>--sorted</code></dt><dd><p>Stop shuffling the questions</p></dd>
 <dt><code>--sorted-answers</code></dt><dd><p>Stop shuffling the answers</p></dd>
@@ -220,7 +225,8 @@ d) there is no error
 
 <h3 id="Comments">Comments</h3>
 
-<p>Lines that start with <code>#</code> or <code>//</code> are skipped (but does not treated as blank line).</p>
+<p>Lines that start with <code>#</code>, <code>//</code> or <code>;</code> are skipped (but does not treated as
+blank line).</p>
 
 <h3 id="Example">Example</h3>
 
@@ -250,6 +256,11 @@ That is also the question (content).
 </code></pre>
 
 <p>Please create an <a href="https://github.com/dejw/pickaxe/issues">issue</a> when You found a bug. Thanks!</p>
+
+<h2 id="CONTRIBUTORS">CONTRIBUTORS</h2>
+
+<pre><code>detach, finger, Nnidyu, pliber, sm00f, quermit
+</code></pre>
 
 <h2 id="AUTHOR">AUTHOR</h2>
 
