Added Travis status.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <div class='mp' id='man'>
 
   <div class='man-navigation' style='display:none'>
+    <a href="http://travis-ci.org/#!/dejw/pickaxe"><img src="https://secure.travis-ci.org/dejw/pickaxe.png" /></a>
     <a href="#NAME">NAME</a>
     <a href="#SYNOPSIS">SYNOPSIS</a>
     <a href="#DESCRIPTION">DESCRIPTION</a>
@@ -75,10 +76,10 @@
     <a href="#SOURCE-CODE">SOURCE CODE</a>
     <a href="#CONTRIBUTORS">CONTRIBUTORS</a>
     <a href="#AUTHOR">AUTHOR</a>
-    </div>
+  </div>
   
   <a href="http://github.com/dejw/pickaxe">
-  	<img style="position: fixed; top: 0; right: 0; border: 0;" 
+    <img style="position: fixed; top: 0; right: 0; border: 0;" 
   		src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" 
   		alt="Fork me on GitHub" />
 	</a>
@@ -287,7 +288,7 @@ available. You have been warned.</p>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>December 2010</li>
+    <li class='tc'>November 2011</li>
     <li class='tr'>pickaxe(1)</li>
   </ol>
 
